[webalbums] fixed layout issue for fluid indexes
Always print a non-void value for the thumbnail attribute
to make the caption of the same height for all the images,
this fixes a layout issue when the "adapt columns to the
window width" option is enabled.

--- a/extensions/webalbums/data/albumthemes/NeatRound/layout.css
+++ b/extensions/webalbums/data/albumthemes/NeatRound/layout.css
@@ -202,7 +202,7 @@ dl.caption-container dd.last {
 }
 
 #thumbnail-list div.thumbnail-container {
-	height: 125px;
+	height: 130px;
 }
 
 #thumbnail-list div.thumbnail-top {
@@ -253,4 +253,5 @@ dl.caption-container dd.last {
 
 #thumbnail-list div.property-row {
 	text-align: center;
+	margin-top: 2px;
 }
